[KeyboardMap] Fix handling of yen and won keys

With Windows Japanese and Korean layouts, the OS returns
duplicate values so it appears that multiple keys return
the '\' char.

It should return the currency symbol (yen or won) instead
of the '\', but J and K codepage history means that
Windows will conveniently (or not) map these characters
to the backslash.

See:
https://web.archive.org/web/20131023080358/http://blogs.msdn.com:80/b/michkap/archive/2005/09/17/469941.aspx
for some history/background.

Bug: 910649
Change-Id: If27e4e46959fccd3da292365c521d7f3c4bb2a9b
Reviewed-on: https://chromium-review.googlesource.com/c/1356875
Reviewed-by: Joe Downing <joedow@chromium.org>
Commit-Queue: Joe Downing <joedow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612789}
Former-commit-id: 82ec099771f979cd73e8a28794813bb915a584fb